@@ -1,6 +1,9 @@
 Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code
 
-Changes on version 1.0.4 (current):
+Changes on version 1.0.7 (current):
+-  Fix Undefined value access.
+
+Changes on version 1.0.4:
 - Add nullability delegate flag to Objective-C reader.
 
 Changes on version 1.0.3:
